--- a/src/app/detalles/detalles.component.css
+++ b/src/app/detalles/detalles.component.css
@@ -1,449 +1,18 @@
-.nombre {
-  font-size: 28px;
-}
-.titulo {
-  font-size: 24px;
-}
-.sinopsis .descripcion {
-  font-size: 16px;
-}
-.card-title {
-  font-size: 18px;
-}
-.vip {
-  font-size: 16px;
-}
-.normal {
-  font-size: 12px;
-}
-.table th, .table td {
-  font-size: 16px;
-}
-.contrasena .pass {
-  font-size: 24px;
-}
-.comentarios {
-  font-size: 18px;
-}
+#detalles { opacity: 0; }
+#detalles.active { opacity: 1; transition: opacity .2s ease-in-out; }
 
-.container-fluid{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
-  margin-top: 1.8rem;
-  margin-bottom: 2rem;
+.item { transition: all 0.2s ease-in-out; }
+.item:hover { transform: scale(1.03); }
+.item:hover .item-img { filter: brightness(1.0); }
+.item-title { transform: translateY(0); transition: all 0.2s ease-in-out; }
+.item:hover .item-title { transform: translateY(-100%); }
+.item-img { filter: brightness(0.5); transition: all 0.2s ease-in-out; }
+.table th, .table td { font-family: 'Consolas', Courier, monospace; }
+.table-striped tbody tr:nth-child(even) th,
+.table-striped tbody tr:nth-child(even) td {
+  background-color: #202246;
 }
-
-.izq {
-  width: 240px;
-  height: 358px;
-  object-fit: cover;
-}
-.der {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.nombre {
-  font-weight: bold;
-  color: yellow;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-.sinopsis {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 0.4rem;
-}
-.titulo {
-  font-weight: bold;
-  text-align: center;
-  color: #20CE88;
-}
-.sinopsis .descripcion {
-  text-align: justify;
-}
-.temporadas {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.8rem;
-  margin-bottom: 2.2rem;
-}
-.card-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.8rem;
-}
-.card {
-  width: 240px;
-  height: 358px;
-  border: solid 0.1rem #20CE88;
-  border-radius: 0;
-  transition-duration: 0.2s;
-  background-color: transparent;
-  overflow: hidden;
-}
-.card:hover {
-  transform: scale(1.05);
-  transition-duration: 0.2s;
-}
-.card:hover .card-img {
-  filter: brightness(1.0);
-  transition-duration: 0.2s;
-}
-.card:hover .card-title {
-  transform: translateY(-100%);
-  transition-duration: 0.2s;
-}
-.card-img {
-  width: auto;
-  height: auto;
-  object-fit: cover;
-}
-.card-img {
-  filter: brightness(0.4);
-  transition-duration: 0.2s;
-}
-.card-content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
-}
-.card-title {
-  width: 100%;
-  padding-top: 0.2rem;
-  padding-bottom: 0.3rem;
-  letter-spacing: 0.1rem;
-  font-weight: bold;
-  text-align: center;
-  color: white;
-  background-color: rgb(255, 0, 0, 0.8);
-  transform: translateY(0);
-  transition-duration: 0.2s;
-}
-.descargas {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 1.2rem;
-  gap: 0.5rem;
-}
-.vip {
-  background-color: rgb(20, 20, 20);
-  border: solid 0.1rem yellow;
-  color: yellow;
-  padding: 0.4rem 1.4rem;
-  letter-spacing: 0.08rem;
-  font-weight: bold;
-  box-shadow: 0px 0px 8px 0px rgba(255, 255, 255, 0.6);
-}
-.normal {
-  background-color: rgb(50, 76, 138);
-  border: none;
-  color: rgb(255, 255, 255, 0.8);
-  padding: 0.3rem 0.6rem;
-  font-weight: bold;
-  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.6);
-}
-
-.infotecnica {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  gap: 1rem;
-  padding: 1rem 2rem;
-  border-radius: 0.4rem;
-  border: solid 0.1rem #09F2FE;
-  background-color: #090E36;
-  margin-bottom: 1rem;
-}
-.table {
-  width: 100%;
-  border: solid 0.1rem lightslategray;
-}
-.table th, .table td {
-  font-family: 'Consolas', Courier, monospace;
-}
-.table th {
-  text-align: left;
-  padding: 0.6rem 1rem;
-  color: white;
-  background-color: #111327;
-}
-.table td {
-  padding: 0.6rem 1rem;
-  color: white;
-  background-color: #181b38;
-}
-
-.contrasena {
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  gap: 0.5rem;
-  padding: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.7rem;
-  border: solid 0.1rem #09F2FE;
-  border-radius: 1rem;
-  background-color: #090E36;
-  margin-bottom: 2.4rem;
-}
-.contrasena .pass {
-  font-weight: bold;
-}
-
-.comentarios {
-  width: 50%;
-  color: black;
-  padding: 1rem;
-  border-radius: 1rem;
-  background-color: white;
-  text-align: center;
-}
-
-
-/* Móviles */
-@media (max-width: 576px) {
-  /* Tipografía */
-  .nombre {
-    font-size: 22px;
-    margin-bottom: 0.6rem;
-  }
-  .titulo {
-    font-size: 16px;
-  }
-  .sinopsis .descripcion,
-  .table th,
-  .table td {
-    font-size: 12px;
-  }
-  .card-title {
-    font-size: 14px;
-  }
-  .vip {
-    font-size: 12px;
-  }
-  .normal {
-    font-size: 10px;
-  }
-  .contrasena .pass {
-    font-size: 18px;
-  }
-  .comentarios {
-    font-size: 16px;
-  }
-
-  /* Contenedores */
-  .container-fluid {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-  }
-  .temporadas {
-    width: 100%;
-    gap: 0.4rem;
-    margin-bottom: 1.4rem;
-  }
-  .card-container {
-    gap: 0.4rem;
-  }
-  .content,
-  .info {
-    gap: 0.2rem;
-  }
-  .infotecnica {
-    width: 100%;
-    padding: 0.6rem 1rem;
-    gap: 0.6rem;
-    margin-bottom: 0.6rem;
-  }
-  .contrasena {
-    width: 100%;
-    padding-top: 0.4rem;
-    padding-bottom: 0.5rem;
-    margin-bottom: 1.4rem;
-  }
-
-  /* Elementos visuales */
-  .izq,
-  .card {
-    width: 160px;
-    height: 240px;
-  }
-  .card:hover,
-  .card:hover .card-title {
-    transform: none;
-  }
-  .card-img {
-    filter: brightness(1); /* Sin atenuar la imagen */
-  }
-}
-
-/* Tabletas */
-@media (min-width: 577px) and (max-width: 768px) {
-  /* Tipografía */
-  .nombre {
-    font-size: 24px; /* Más grande que en móviles */
-    margin-bottom: 0.8rem;
-  }
-  .titulo {
-    font-size: 18px;
-  }
-  .sinopsis .descripcion,
-  .table th,
-  .table td {
-    font-size: 14px;
-  }
-  .card-title {
-    font-size: 16px;
-  }
-  .vip {
-    font-size: 14px;
-  }
-  .normal {
-    font-size: 12px;
-  }
-  .contrasena .pass {
-    font-size: 20px;
-  }
-  .comentarios {
-    font-size: 18px;
-  }
-
-  /* Contenedores */
-  .container-fluid {
-    margin-top: 1.2rem;
-    margin-bottom: 1.2rem;
-    padding: 0 1rem;
-  }
-  .temporadas {
-    width: 100%;
-    gap: 0.6rem;
-    margin-bottom: 1.6rem;
-  }
-  .card-container {
-    gap: 0.6rem;
-  }
-  .content,
-  .info {
-    gap: 0.4rem;
-  }
-  .infotecnica {
-    width: 80%; /* Ajusta el ancho ligeramente */
-    padding: 1rem 1.5rem;
-    gap: 0.8rem;
-    margin-bottom: 1rem;
-  }
-  .contrasena {
-    width: 80%;
-    padding: 0.6rem 1rem;
-    margin-bottom: 1.6rem;
-  }
-
-  /* Elementos visuales */
-  .izq,
-  .card {
-    width: 200px; /* Tamaño más grande que en móviles */
-    height: 300px;
-  }
-  .card:hover,
-  .card:hover .card-title {
-    transform: scale(1.02); /* Mantén algo de interactividad */
-    transition-duration: 0.2s;
-  }
-  .card-img {
-    filter: brightness(0.9); /* Ligera atenuación */
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1200px) {
-  /* Tipografía */
-  .nombre {
-    font-size: 26px;
-    margin-bottom: 1rem;
-  }
-  .titulo {
-    font-size: 20px;
-  }
-  .sinopsis .descripcion,
-  .table th,
-  .table td {
-    font-size: 14px;
-  }
-  .card-title {
-    font-size: 18px;
-  }
-  .vip {
-    font-size: 16px;
-  }
-  .normal {
-    font-size: 14px;
-  }
-  .contrasena .pass {
-    font-size: 22px;
-  }
-  .comentarios {
-    font-size: 18px;
-  }
-
-  /* Contenedores */
-  .container-fluid {
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    padding: 0 1.5rem; /* Añade un poco más de espacio lateral */
-  }
-  .temporadas {
-    width: 100%;
-    gap: 0.8rem;
-    margin-bottom: 2rem;
-  }
-  .card-container {
-    gap: 0.8rem;
-  }
-  .content,
-  .info {
-    gap: 0.6rem;
-  }
-  .infotecnica {
-    width: 70%; /* Más ancho que en tabletas */
-    padding: 1.2rem 2rem;
-    gap: 1rem;
-    margin-bottom: 1.2rem;
-  }
-  .contrasena {
-    width: 70%;
-    padding: 0.8rem 1.2rem;
-    margin-bottom: 2rem;
-  }
-
-  /* Elementos Visuales */
-  .izq,
-  .card {
-    width: 220px; /* Un tamaño intermedio entre tabletas y escritorio */
-    height: 320px;
-  }
-  .card:hover,
-  .card:hover .card-title {
-    transform: scale(1.03); /* Incremento ligero en hover */
-    transition-duration: 0.2s;
-  }
-  .card-img {
-    filter: brightness(0.85); /* Mantén el contraste visual */
-  }
+.table-striped tbody tr:nth-child(odd) th,
+.table-striped tbody tr:nth-child(odd) td {
+  background-color: #191b38;
 }
