--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -1,11 +1,5 @@
-#inicio {
-    opacity: 0;
-}
-
-#inicio.active {
-    opacity: 1;
-    transition: opacity .2s ease-in-out;
-}
+#inicio { opacity: 0; }
+#inicio.active { opacity: 1; transition: opacity .2s ease-in-out; }
 
 #carouselInicio {
   height: 340px;
