--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="inicio">
+<div id="inicio">
   <div id="carouselInicio" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
     <div class="carousel-indicators">
       <button *ngFor="let serie of series; let i = index" type="button" [attr.data-bs-target]="'#carouselInicio'"
