--- a/src/app/menu-flotante/menu-flotante.component.html
+++ b/src/app/menu-flotante/menu-flotante.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="accesoPermitido" class="position-fixed bottom-0 end-0 d-flex align-items-end flex-column m-4 text-end">
+<div *ngIf="accesoPermitido" class="position-fixed bottom-0 end-0 d-flex align-items-end flex-column m-4 text-end" style="z-index: 10;">
     <div #menuRef class="collapse mb-2" id="menuFlotante">
         <div class="d-flex flex-column border border-success rounded shadow-sm p-2 gap-1"
             style="background-color: #1B1B3A;">
