--- a/src/app/gestionar-series/gestionar-series.component.html
+++ b/src/app/gestionar-series/gestionar-series.component.html
@@ -1,6 +1,6 @@
 <div id="gestionar-series" class="container-fluid text-center">
     <h2 class="text-white fw-bold mt-4">Gestionar Series</h2>
-    <div class="d-flex justify-content-center align-items-center gap-2 mt-4">
+    <div class="d-flex flex-wrap justify-content-center align-items-center gap-2 mt-4">
         <input id="buscar" type="text" class="form-control" placeholder="Buscar serie..." [(ngModel)]="busqueda"
             (input)="filtrarSeries()" />
         <select class="form-select w-auto" [(ngModel)]="filtroNombre" (change)="filtrarSeries()">
