--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,33 +1,7 @@
-.menu-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  background-color: #21174C;
-  border-bottom: solid 0.1rem rgb(0, 0, 0, 0.2);
-}
-
-.menu-icon, .user-icon, .movil {
-  display: none;
-}
-
-.nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  row-gap: 1.2rem;
-  column-gap: 4rem;
-  flex: 1;
-}
 .nav a {
   color: white;
   letter-spacing: 0.1rem;
   transition: all 0.2s ease-in-out;
-}
-.nav i {
-  font-size: 16px;
 }
 .nav a:hover {
   color: #FFD700;
@@ -36,214 +10,11 @@
   color: #FFD700;
 }
 
-header img {
-  width: 100%;
+#menu-movil {
+  transform: translateY(-100%);
+  transition: all 0.3s ease-in-out;
 }
 
-.title {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  padding-left: 1.2rem;
-  left: 0;
-}
-.title a {
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  letter-spacing: 0.1rem;
-  text-decoration: none;
-}
-.actions {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.6rem;
-  padding-right: 1.2rem;
-  right: 0;
-}
-
-.login, .singup, .user-profile {
-  height: 38px;
-  align-content: center;
-}
-
-.login, .singup {
-  background-color: transparent;
-  color: white;
-  font-weight: bold;
-  border: none;
-  transition: all 0.2s ease-in-out;
-}
-.login {
-  background-color: transparent;
-}
-.singup {
-  background-color: #531e9f;
-}
-.login:hover {
-  background-color: #542B91;
-}
-.singup:hover {
-  background-color: #491b8a;
-}
-
-.user-profile {
-  display: flex;
-  align-items: center;
-  color: white;
-  cursor: pointer;
-  border-radius: 0.4rem;
-  padding: 0.6rem;
-  transition: all 0.2s ease-in-out;
-}
-.user-profile:hover {
-  background-color: #3c1d62;
-}
-.profile-picture {
-  width: 26px !important;
-  height: 26px !important;
-  border-radius: 50%;
-}
-.username {
-  font-size: 1rem;
-  font-weight: bold;
-  max-width: 360px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.dropdown-menu {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 100%;
-  right: 0;
-  /* border: solid 1px #09F2FE; */
-  background-color: #3c1d62;
-  border-radius: 0.4rem;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
-  width: 180px;
-  z-index: 1000;
-  margin-top: 0.4rem;
-  margin-right: 1rem;
-}
-
-.dropdown-item {
-  cursor: pointer;
-  text-align: left;
-  color: white;
-  padding: .5rem 1rem;
-  background-color: transparent;
-  transition: all 0.2s ease-in-out;
-}
-.dropdown-item:hover {
-  background-color: #833ABF;
-}
-
-/* Media Query: Móviles (max-width: 576px) */
-@media (max-width: 768px) {
-  .logo, .actions, .desktop {
-    display: none;
-  }
-  .movil {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    display: flex;
-    margin-top: 3.6rem;
-    z-index: 10;
-  }
-  .menu-container {
-    padding: .6rem;
-  }
-  .menu-icon, .user-icon {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    color: white;
-    text-decoration: none;
-  }
-  .user-icon {
-    padding: 0.2rem;
-  }
-  .user-icon img {
-    border-radius: 50%;
-  }
-  .title {
-    padding: 0;
-    position: relative;
-  }
-  .title a {
-    font-size: 18px;
-  }
-  .nav {
-    width: 100%;
-    height: 100%;
-    max-height: 100%;
-    min-height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    padding-top: 6rem;
-    flex-direction: column;
-    gap: 1.2rem;
-    background-color: rgb(33, 23, 76, 0.9);
-    /* background-color: rgb(33, 23, 76, 0.9); */
-    opacity: 0;
-    transition: all 0.14s ease-in-out;
-  }
-  .account-pos {
-    right: 0;
-  }
-  .menu-bar {
-    transform: translateX(-100%);
-  }
-  .account-bar {
-    transform: translateX(100%);
-  }
-  .nav a {
-    font-size: 22px;
-  }
-  .nav i {
-    font-size: 20px;
-  }
-  .menu-bar.active, .account-bar.active  {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  .menu-icon {
-    transform: rotate(0deg);
-    transition: all 0.14s ease-in-out;
-  }
-  .menu-icon.active {
-    color: red;
-    font-size: 34px;
-    transform: rotate(180deg);
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1024px) {
-  .username {
-    max-width: 200px;
-  }
-  .nav {
-    column-gap: 2rem;
-  }
-  .title {
-    padding-left: .8rem;
-  }
-  .actions {
-    padding-right: .8rem;
-  }
-}
-
-@media (min-width: 1024px) and (max-width: 1200px) {
-  .username {
-    max-width: 280px;
-  }
+#menu-movil.active {
+  transform: translateY(0);
 }
