--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,12 +8,12 @@
     <div class="col-8 col-md-4"><a class="nav-link fs-5 fw-bold text-center text-md-start" routerLink="/">Luis✪F Series</a></div>
     <ul class="col-4 nav justify-content-center gap-3 d-none d-md-flex">
       <li class="nav-item">
-        <a class="nav-link active fw-light fs-5" href="#">
+        <a class="nav-link active fw-light fs-5" href="/">
           <i class="fa-solid fa-home"></i> Inicio
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link fw-light fs-5" href="#">
+        <a class="nav-link fw-light fs-5" href="series">
           <i class="fa-solid fa-tv"></i> Series
         </a>
       </li>
@@ -24,12 +24,12 @@
 <div id="menu-movil" class="position-absolute w-100 d-fill d-flex d-md-none" style="z-index: 10; background-color: #21174C;" [ngClass]="{ 'active': menuActive }">
   <ul class="nav justify-content-center gap-3 flex-column opacity-100 p-3">
     <li class="nav-item">
-      <a class="nav-link active fw-light fs-5" href="#">
+      <a class="nav-link active fw-light fs-5" href="/">
         <i class="fa-solid fa-home"></i> Inicio
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link fw-light fs-5" href="#">
+      <a class="nav-link fw-light fs-5" href="series">
         <i class="fa-solid fa-tv"></i> Series
       </a>
     </li>
